11-12-14:
Removed the ABM for torches, and replaced the two nodes with just one.
Tweaked the lighter, it should last longer and light fires faster.

11-11-14:
Charcoal blocks are now flammable.

11-08-14:
Added a kindling that will created contained fire.
Updated the lighter to turn the two different kindling into the two different fires.

11-05-14:
Corrected the texture for the Charcoal Block.
Added recipe to turn charcoal block back into charcoal lumps.

11-04-14:
Added recipe for fire that uses torch and kindling.

10-27-14:
Made the torches a tad bit smaller.
Removed all the formspec stuff from the campfires. I couldn't get them to work, so I'll come back to that when I learn more of the coding needed.
Removed the .mlt files from the models folder as I discovered they aren't needed and just give errors in the debug.

10-26-14:
Added kindling, craft it from a stick, wood, and two other flammable grouped items. Light it with the lighter, which is made with flint and steel.

10-25-14:
Torches stick to the wall or the floor according as they should. Copied code from the 3d_torch mod.

10-24-14:
Campfires now have animated fire. Turns out that I was exporting the file wrong. :S

10-22-14:
Added 3d models for the torch and campfires. Textures aren't perfect on the campfire yet.

10-19-14:
Added the 'more_fire = {}' line and now the mod runs again, though the fire doesn't do anything when you right click on it.

10-17-14:
Renamed and relocated the git repository to match the forum topic
Updated the fire so it can only be placed on the ground.
Added flint that drops from gravel. Will be used for fire starters.
Campfire now drops charcoal.